# homelab

./: .devcontainer.json  .gitignore  .markdownlint.yaml  README.md  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: flux-updates.yaml
apps-old/mealie/: mealie-deployment.yaml  networking.yaml
apps/homarr/: homarr.yaml  kustomization.yaml
apps/jotunheim/: kustomization.yaml
apps/mealie/: database-backup.yaml  database.yaml  ingress.yaml  kustomization.yaml  mealie-data-persistentvolumeclaim.yaml  mealie-deployment.yaml  mealie-service.yaml  test-restore-mealie.yaml
apps/production/: kustomization.yaml
apps/staging/: kustomization.yaml
clusters/data/: databases.yaml  infrastructure.yaml  monitoring.yaml
clusters/jotunheim/: apps.yaml  infrastructure.yaml  monitoring.yaml
clusters/production/: apps.yaml  flux-system-automation.yaml  infrastructure.yaml  monitoring.yaml  private.yaml  zettelkasten-tracker-policy.yaml  (+1 more)
docs/: grafana-ingress.yaml  homelab-ubuntu-server.md  install-with-kubeadm.md  k3s.md  networking.md  secrets.md
flux-test/: HelmRelease.yaml
tmp/: apps.yaml  infrastructure.yaml
utils/: README.md
utils/database/: README.md  backup-mealie.yaml  delete.py  deployment_example.yaml  kubernetes_config_template.yaml  main.py  myapp_kubernetes_configs.yaml  pyproject.toml  secrets_example.yaml  setup_db.py  yaml_generator.py
utils/database/backups/: test-restore-mealie.yaml
utils/database/generated-configs/: health_kubernetes_configs.yaml  shelly_kubernetes_configs.yaml  skool_kubernetes_configs.yaml
(+497 files in other folders)
